# sarmata-client

./: .gitignore  README.md  sarmata-client.sln
cpp/: CHANGELOG.md  CMakeLists.txt  README.md  SConstruct  make_proto.sh  sarmata-client.sln
cpp/libsarmata-client/: ASRSession.h  ASRSessionUtils.cpp  ASRSessionUtils.h  CMakeLists.txt  ReadMe.txt  RemoteSession.cpp  RemoteSession.h  SConscript  VERSION.h  asr_service.grpc.pb.cc  asr_service.grpc.pb.h  asr_service.pb.cc  asr_service.pb.h  libsarmata-client.vcxproj  sarmata_asr.grpc.pb.cc  sarmata_asr.grpc.pb.h  sarmata_asr.pb.cc  sarmata_asr.pb.h  sarmata_client.cpp  sarmata_client.h
cpp/libsarmata-client/submodules/sarmata-client/proto/: asr_service.grpc.pb.h  asr_service.pb.cc
cpp/sarmata-client/: CMakeLists.txt  SConscript  main.cpp  sarmata-client.vcxproj
docs/: README.md  gen_proto_doc.sh  index.md
libsarmata/: asr_service.pb.cc  asr_service.pb.h  libsarmata.vcxproj  libsarmata.vcxproj.filters
libsarmata-client/: ASRSession.h  ASRSessionUtils.cpp  RemoteSession.cpp  RemoteSession.h  SConscript  asr_service.grpc.pb.cc  asr_service.grpc.pb.h  asr_service.pb.cc  asr_service.pb.h  libsarmata-client.vcxproj  libsarmata-client.vcxproj.filters
proto/: asr_service.proto  run_protoc.sh  sarmata_asr.proto
python/: CHANGELOG.md  README.md  VERSION.py  make_proto.sh  requirements.txt  sarmata_client.py
python/service/: asr_service_pb2.py  asr_service_pb2_grpc.py  sarmata_asr_pb2.py  sarmata_asr_pb2_grpc.py  sarmata_recognize.py  sarmata_settings.py
sarmata-client/: SConscript  main.cpp  sarmata-client.vcxproj
(+2 files in other folders)
